CMake: Fix wrap and scripts depending on SG_MODULE_ANALYZE
Only enable them is SG_MODULE_ANALYZE is ON

--- a/cpp-scripts/CMakeLists.txt
+++ b/cpp-scripts/CMakeLists.txt
@@ -21,10 +21,12 @@ set(_scripts_targets_visualize_using_qt # Using Qt (DGtal or VTK)
 
 set(_Boost_components Boost::program_options Boost::filesystem)
 
-add_executable(graph_to_vtp graph_to_vtp.cpp)
-target_link_libraries(graph_to_vtp SGLocate )
-target_link_libraries(graph_to_vtp ${_Boost_components} )
-target_link_libraries(graph_to_vtp ${VTK_LIBRARIES} )
+if(SG_MODULE_LOCATE)
+    add_executable(graph_to_vtp graph_to_vtp.cpp)
+    target_link_libraries(graph_to_vtp SGLocate )
+    target_link_libraries(graph_to_vtp ${_Boost_components} )
+    target_link_libraries(graph_to_vtp ${VTK_LIBRARIES} )
+endif()
 
 add_executable(fill_holes_binary fill_holes_binary.cpp)
 target_link_libraries(fill_holes_binary ${_Boost_components} )
@@ -58,32 +60,37 @@ if(SG_MODULE_COMPARE)
     endif()
 endif()
 
-add_executable(analyze_graph analyze_graph.cpp analyze_graph_function.cpp)
-target_link_libraries(analyze_graph SGExtract SGAnalyze)
-target_link_libraries(analyze_graph ${_Boost_components})
-target_link_libraries(analyze_graph ${ITK_LIBRARIES} )
-target_link_libraries(analyze_graph ${DGTAL_LIBRARIES} )
-target_include_directories(analyze_graph PRIVATE ${DGTAL_INCLUDE_DIRS} )
-if(SG_MODULE_VISUALIZE)
-    target_link_libraries(analyze_graph SGVisualize)
-    target_compile_definitions(analyze_graph PUBLIC SG_MODULE_VISUALIZE_ENABLED)
-    if(SG_MODULE_VISUALIZE_WITH_QT)
-        target_compile_definitions(analyze_graph PUBLIC SG_MODULE_VISUALIZE_ENABLED_WITH_QT)
+if(SG_MODULE_ANALYZE)
+    add_executable(analyze_graph analyze_graph.cpp analyze_graph_function.cpp)
+    target_link_libraries(analyze_graph SGExtract SGAnalyze)
+    target_link_libraries(analyze_graph SGAnalyze)
+    target_link_libraries(analyze_graph ${_Boost_components})
+    target_link_libraries(analyze_graph ${ITK_LIBRARIES} )
+    target_link_libraries(analyze_graph ${DGTAL_LIBRARIES} )
+    target_include_directories(analyze_graph PRIVATE ${DGTAL_INCLUDE_DIRS} )
+    if(SG_MODULE_VISUALIZE)
+        target_link_libraries(analyze_graph SGVisualize)
+        target_compile_definitions(analyze_graph PUBLIC SG_MODULE_VISUALIZE_ENABLED)
+        if(SG_MODULE_VISUALIZE_WITH_QT)
+            target_compile_definitions(analyze_graph PUBLIC SG_MODULE_VISUALIZE_ENABLED_WITH_QT)
+        endif()
     endif()
 endif()
 
-add_executable(full_graph full_graph.cpp)
-target_link_libraries(full_graph SGExtract SGAnalyze)
-target_link_libraries(full_graph ${_Boost_components})
-target_link_libraries(full_graph
-    ${ITK_LIBRARIES}
-    ${DGTAL_LIBRARIES}
-    )
-target_include_directories(full_graph PRIVATE ${DGTAL_INCLUDE_DIRS})
-if(SG_MODULE_VISUALIZE_WITH_QT)
-    target_link_libraries(full_graph SGVisualize )
-    # target_link_libraries(full_graph Qt5::Widgets Qt5::Xml )
-    target_compile_definitions(full_graph PUBLIC VISUALIZE)
+if(SG_MODULE_ANALYZE)
+    add_executable(full_graph full_graph.cpp)
+    target_link_libraries(full_graph SGExtract SGAnalyze)
+    target_link_libraries(full_graph ${_Boost_components})
+    target_link_libraries(full_graph
+        ${ITK_LIBRARIES}
+        ${DGTAL_LIBRARIES}
+        )
+    target_include_directories(full_graph PRIVATE ${DGTAL_INCLUDE_DIRS})
+    if(SG_MODULE_VISUALIZE_WITH_QT)
+        target_link_libraries(full_graph SGVisualize )
+        # target_link_libraries(full_graph Qt5::Widgets Qt5::Xml )
+        target_compile_definitions(full_graph PUBLIC VISUALIZE)
+    endif()
 endif()
 
 if(SG_MODULE_ANALYZE)
@@ -104,7 +111,7 @@ target_link_libraries(mask_distance_map_with_thin_image SGCore )
 target_link_libraries(mask_distance_map_with_thin_image ${_Boost_components} )
 target_link_libraries(mask_distance_map_with_thin_image ${ITK_LIBRARIES} )
 
-if(SG_MODULE_VISUALIZE_WITH_QT)
+if(SG_MODULE_VISUALIZE_WITH_QT AND SG_MODULE_ANALYZE)
     add_executable(highlight_image_points highlight_image_points.cpp)
     target_link_libraries(highlight_image_points ${_Boost_components} )
     target_link_libraries(highlight_image_points ${ITK_LIBRARIES} )
