Python: Use pybind11_common has common header for all python
Solves warning -Wodr: https://github.com/pybind/pybind11/issues/1055

--- a/wrap/CMakeLists.txt
+++ b/wrap/CMakeLists.txt
@@ -38,6 +38,8 @@ pybind11_add_module(_sgext
   ${all_modules_python_sources} # all the collected sources in submodules
   )
 target_link_libraries(_sgext PRIVATE ${enabled_libs_})
+target_include_directories(_sgext PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}) # For pybind11_common.h
+target_include_directories(_sgext PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/submodules) # For #include "core/sgcore_common_py"
 target_include_directories(_sgext PRIVATE ${enabled_include_dirs_})
 if(SG_REQUIRES_VTK)
   target_compile_definitions(_sgext PRIVATE SG_USING_VTK)
