--- a/dependencies/CMakeLists.txt
+++ b/dependencies/CMakeLists.txt
@@ -65,13 +65,12 @@ endif()
 #################################################
 if(WITH_ITK)
   # set(ITK_GIT_TAG v5.1rc03)
-  set(ITK_GIT_TAG HDopen-mingw)
+  set(ITK_GIT_TAG master)
   message(STATUS "ITK_VERSION: ${ITK_GIT_TAG}")
   set(ITK_BUILD_DIR ${OUTPUT_BUILD_DIR}/ITK-build)
   set(ITK_SRC_FOLDER_NAME ITK-src)
   set(ITK_SRC_DIR ${OUTPUT_BUILD_DIR}/${ITK_SRC_FOLDER_NAME})
-  # set(ITK_GIT_REPOSITORY "https://github.com/InsightSoftwareConsortium/ITK.git")
-  set(ITK_GIT_REPOSITORY "https://github.com/thewtex/ITK.git")
+  set(ITK_GIT_REPOSITORY "https://github.com/InsightSoftwareConsortium/ITK.git")
   set(_ITK_depends)
   set(_ITK_optional_cmake_args)
   if(WITH_VTK)
