--- a/dependencies/CMakeLists.txt
+++ b/dependencies/CMakeLists.txt
@@ -46,6 +46,8 @@ ExternalProject_Add(ep_vtk
   SOURCE_DIR ${VTK_SRC_DIR}
   BINARY_DIR ${VTK_BUILD_DIR}
   CMAKE_ARGS
+  -DCMAKE_C_COMPILER:FILEPATH=${CMAKE_C_COMPILER}
+  -DCMAKE_CXX_COMPILER:FILEPATH=${CMAKE_CXX_COMPILER}
   -DCMAKE_BUILD_TYPE:STRING=${SGEXT_CMAKE_BUILD_TYPE}
   -DBUILD_SHARED_LIBS:BOOL=ON
   -DBUILD_TESTING:BOOL=OFF
@@ -82,6 +84,8 @@ if(WITH_ITK)
     SOURCE_DIR ${ITK_SRC_DIR}
     BINARY_DIR ${ITK_BUILD_DIR}
     CMAKE_ARGS
+    -DCMAKE_C_COMPILER:FILEPATH=${CMAKE_C_COMPILER}
+    -DCMAKE_CXX_COMPILER:FILEPATH=${CMAKE_CXX_COMPILER}
     -DCMAKE_BUILD_TYPE:STRING=${SGEXT_CMAKE_BUILD_TYPE}
     -DBUILD_TESTING:BOOL=OFF
     ${_ITK_optional_cmake_args}
@@ -170,6 +174,8 @@ ExternalProject_Add(ep_dgtal
   SOURCE_DIR ${DGtal_SRC_DIR}
   BINARY_DIR ${DGtal_BUILD_DIR}
   CMAKE_ARGS
+      -DCMAKE_C_COMPILER:FILEPATH=${CMAKE_C_COMPILER}
+      -DCMAKE_CXX_COMPILER:FILEPATH=${CMAKE_CXX_COMPILER}
       -DCMAKE_BUILD_TYPE:STRING=${SGEXT_CMAKE_BUILD_TYPE}
       -DBUILD_SHARED_LIBS:BOOL=ON
       -DBUILD_TESTING:BOOL=OFF
