Dependencies: Set DGtal BUILD_SHARED_LIBS to OFF
Problems in windows where .lib not found.

Probably DGtal is not `_decl` properly (exporting symbols)

--- a/dependencies/CMakeLists.txt
+++ b/dependencies/CMakeLists.txt
@@ -179,7 +179,7 @@ ExternalProject_Add(ep_dgtal
       -DCMAKE_C_COMPILER:FILEPATH=${CMAKE_C_COMPILER}
       -DCMAKE_CXX_COMPILER:FILEPATH=${CMAKE_CXX_COMPILER}
       -DCMAKE_BUILD_TYPE:STRING=${SGEXT_CMAKE_BUILD_TYPE}
-      -DBUILD_SHARED_LIBS:BOOL=ON
+      -DBUILD_SHARED_LIBS:BOOL=OFF
       -DBUILD_TESTING:BOOL=OFF
       -DBUILD_EXAMPLES:BOOL=OFF
       -DCMAKE_FIND_PACKAGE_PREFER_CONFIG:BOOL=ON
