Add zlib to Build Project stage in Windows
```
ninja: error: 'C:/Program Files/zlib/lib/zlib.lib', needed by 'wrap/_sgext.cp35-win_amd64.pyd', missing and no known rule to make it
```

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -132,6 +132,8 @@ stages:
         versionSpec: '$(python.version)'
     - script: |
         call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
+        powershell -Command "(New-Object Net.WebClient).DownloadFile('https://raw.githubusercontent.com/horta/zlib.install/master/install.bat', 'install.bat')"
+        call "./install.bat"
         python -m pip install cmake
         python -m pip install ninja
         python -m pip install -r requirements-deploy.txt
