Fix boost option for static linking
This fix the deploy in MacOS because missing `boost_x.dylib`

Also bump python version for pypi upload

--- a/dependencies/CMakeLists.txt
+++ b/dependencies/CMakeLists.txt
@@ -143,7 +143,7 @@ ExternalProject_Add(ep_boost
      --without-type_erasure
      --without-stacktrace
      --threading=multi
-     --link=static
+     link=static
      variant=release
      ${_boost_extra_args}
      -j${NUM_CORES}
