Deploy dependencies linux: install libgl with apt
Solves:
```
CMake Error at /usr/local/share/cmake-3.16/Modules/FindPackageHandleStandardArgs.cmake:146 (message):
  Could NOT find OpenGL (missing: OPENGL_opengl_LIBRARY OPENGL_glx_LIBRARY
  OPENGL_INCLUDE_DIR)
Call Stack (most recent call first):
  /usr/local/share/cmake-3.16/Modules/FindPackageHandleStandardArgs.cmake:393 (_FPHSA_FAILURE_MESSAGE)
  /usr/local/share/cmake-3.16/Modules/FindOpenGL.cmake:397 (FIND_PACKAGE_HANDLE_STANDARD_ARGS)
  CMake/vtkOpenGL.cmake:146 (find_package)
  ThirdParty/glew/vtkglew/CMakeLists.txt:17 (include)

```

--- a/dependencies/azure-pipelines.yml
+++ b/dependencies/azure-pipelines.yml
@@ -16,6 +16,8 @@ stages:
         mkdir $DEPENDENCIES_BUILD_DIR
         echo $DEPENDENCIES_BUILD_DIR
       displayName: "mkdir DEPENDENCIES_BUILD_DIR"
+    - script: sudo apt-get -y install libxt-dev libgl1-mesa-dev
+      displayName: "install libXt and opengl dependencies"
     - task: Bash@3
       inputs:
         filePath: '$(Build.SourcesDirectory)/deploy/deploy_dependencies.sh'
