--- a/wrap/test/itk/CMakeLists.txt
+++ b/wrap/test/itk/CMakeLists.txt
@@ -1,6 +1,7 @@
 set(python_tests_
   test_itk_image.py
-  test_itk_view_image.py # Creates windows that have to be manually closed
+  test_itk_image_io.py
+  test_itk_view_image.py
   )
 
 get_filename_component(module_name_ ${CMAKE_CURRENT_SOURCE_DIR} NAME)
