Python: Add from_to module to convert between sgext and itk
Adds set_direction/spacing/origin/region methods to sgext_image

Also fix `from_pyarray` bug with wrong index in size.

Adds tests

--- a/wrap/itk/CMakeLists.txt
+++ b/wrap/itk/CMakeLists.txt
@@ -11,3 +11,15 @@ set(all_modules_python_sources
   ${all_modules_python_sources}
   ${current_sources_}
   PARENT_SCOPE)
+
+set(_pure_python_files
+  from_to.py
+  )
+
+# Copy pure python at configure time
+file(COPY ${_pure_python_files} DESTINATION ${CMAKE_BUILD_PYTHONLIBDIR})
+# Handle installation of pure python
+install(FILES ${_pure_python_files}
+  DESTINATION ${CMAKE_INSTALL_PYTHONLIBDIR}
+  COMPONENT runtime
+  )
