Change import of sgext in tests
Change for tests to import sgext the same way than a user would do.
This will help with docs. As well as allowing tests of pure python
scripts, like `from_to.py` with the same import nomenclature.

Also fix minor bugs in tests that requires `import itk`

--- a/wrap/test/generate/CMakeLists.txt
+++ b/wrap/test/generate/CMakeLists.txt
@@ -17,5 +17,5 @@ foreach(python_test ${python_tests_})
   # Append the build folder where python lib is to PYTHONPATH
   # Allowing ctest -R "a_python_test_name_" -V to work
   set_tests_properties(${python_test_name_} PROPERTIES
-    ENVIRONMENT PYTHONPATH=$ENV{PYTHONPATH}:${CMAKE_BUILD_PYTHONLIBDIR})
+    ENVIRONMENT PYTHONPATH=$ENV{PYTHONPATH}:${CMAKE_BUILD_PYTHONLIBDIR}/..)
 endforeach()
