Wrap mask_image
Provide python wrappings for mask_distance_map_with_thin_image script

--- a/wrap/submodules/scripts/CMakeLists.txt
+++ b/wrap/submodules/scripts/CMakeLists.txt
@@ -2,6 +2,7 @@ set(current_sources_
   sgscripts_init_py.cpp
   thin_py.cpp
   create_distance_map_py.cpp
+  mask_image_py.cpp
   )
 
 if(SG_MODULE_ANALYZE)
