CMake: Remove suppress file of valgrind in CMake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -189,8 +189,8 @@ export(TARGETS histo
 if(SG_BUILD_TESTING)
   if(SG_BUILD_ENABLE_VALGRIND)
     find_program(MEMORYCHECK_COMMAND valgrind)
+    # set(MEMORYCHECK_SUPPRESSIONS_FILE "${CMAKE_CURRENT_BINARY_DIR}/valgrind_suppress.txt")
     set(MEMORYCHECK_COMMAND_OPTIONS "--trace-children=yes --leak-check=full")
-    set(MEMORYCHECK_SUPPRESSIONS_FILE "${CMAKE_CURRENT_BINARY_DIR}/valgrind_suppress.txt")
     include(Dart)
   endif()
   enable_testing()
