Python: Add pure python module sgext.fixture
Contains the fixture six_nodes

```python
import sgext.fixtures
fixture = sgext.fixtures.six_nodes()
# Use fixture.graph
```

--- a/wrap/CMakeLists.txt
+++ b/wrap/CMakeLists.txt
@@ -82,6 +82,13 @@ add_custom_command(
   ${CMAKE_BUILD_PYTHONLIBDIR}/$<TARGET_FILE_NAME:_sgext>
   )
 
+# Copy and install fixtures
+file(COPY fixtures DESTINATION ${CMAKE_BUILD_PYTHONLIBDIR})
+install(DIRECTORY fixtures
+  DESTINATION ${CMAKE_INSTALL_PYTHONLIBDIR}
+  COMPONENT runtime
+  )
+
 if(SG_BUILD_TESTING)
   add_subdirectory(test)
 endif()
