--- a/wrap/submodules/scripts/CMakeLists.txt
+++ b/wrap/submodules/scripts/CMakeLists.txt
@@ -12,6 +12,9 @@ if(SG_MODULE_ANALYZE)
     ${CMAKE_SOURCE_DIR}/cpp-scripts/analyze_graph_function.cpp
     )
 endif()
+if(SG_MODULE_VISUALIZE AND SG_MODULE_LOCATE)
+  list(APPEND current_sources_ visualize_spatial_graph_py.cpp)
+endif()
 set(module_name_ ${CMAKE_CURRENT_SOURCE_DIR})
 list(TRANSFORM current_sources_ PREPEND "${module_name_}/")
 
