--- a/wrap/CMakeLists.txt
+++ b/wrap/CMakeLists.txt
@@ -17,6 +17,9 @@ if(SG_MODULE_DYNAMICS)
   add_subdirectory(submodules/dynamics)
   list(APPEND enabled_libs_ SGDynamics)
 endif()
+if(SG_MODULE_LOCATE)
+  list(APPEND enabled_libs_ SGLocate)
+endif()
 if(SG_MODULE_VISUALIZE)
   # add_subdirectory(submodules/visualize)
   list(APPEND enabled_libs_ SGVisualize)
@@ -58,6 +61,9 @@ if(SG_MODULE_VISUALIZE)
   if(SG_MODULE_VISUALIZE_WITH_QT)
     target_compile_definitions(_sgext PRIVATE VISUALIZE)
   endif()
+endif()
+if(SG_MODULE_LOCATE)
+  target_compile_definitions(_sgext PRIVATE SG_MODULE_LOCATE_ENABLED)
 endif()
 if(SG_BUILD_SCRIPTS)
   target_compile_definitions(_sgext PRIVATE SG_MODULE_SCRIPTS_ENABLED)
