Add cpp test for visualize_spatial_graph_with_points
Trying to solve the problem of window not closing in ipython,
reported here:

https://gitlab.kitware.com/vtk/vtk/-/issues/17251#note_755221

--- a/modules/visualize/test/CMakeLists.txt
+++ b/modules/visualize/test/CMakeLists.txt
@@ -2,14 +2,19 @@ set(SG_MODULE_${SG_MODULE_NAME}_TEST_DEPENDS
   ${SG_MODULE_${SG_MODULE_NAME}_LIBRARY}
   ${SG_MODULE_${SG_MODULE_NAME}_DEPENDS}
   ${GTEST_LIBRARIES})
-set(qt_tests "")
+set(_with_qt_tests "")
 if(SG_MODULE_VISUALIZE_WITH_QT)
-    set(qt_tests test_visualize_histograms.cpp)
+    set(_with_qt_tests test_visualize_histograms.cpp)
+endif()
+if(SG_MODULE_LOCATE)
+  set(_with_locate_tests test_visualize_spatial_graph_with_points.cpp)
+  list(APPEND SG_MODULE_${SG_MODULE_NAME}_TEST_DEPENDS SGLocate)
 endif()
 set(SG_MODULE_${SG_MODULE_NAME}_TESTS
   test_visualize_spatial_graph.cpp
   test_convert_to_vtk_unstructured_grid.cpp
-  ${qt_tests}
+  ${_with_qt_tests}
+  ${_with_locate_tests}
   )
 
 SG_add_gtests()
