Add WITH_QT5 option to dependencies
Allowing DGtal to be compiled with `WITH_QT5` and `WITH_QGLVIEWER`
And VTK with `Module_vtkGUISupportQt=ON`

However it does not handle the installation of Qt5 or QGLViewer,
so it will only work if those are already installed in the system.

`WITH_QT5` cannot be turned on for CI/CD.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -114,10 +114,15 @@ endif() #ITK
 
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 if(SG_MODULE_VISUALIZE_WITH_QT)
+  if(UNIX)
+    set(extra_qt_components X11Extras)
+  endif()
   find_package(Qt5 REQUIRED
     Widgets
     Xml
-    OpenGL)
+    OpenGL
+    ${extra_qt_components}
+    )
   message(STATUS "Qt5 version: ${Qt5_VERSION}")
 
   set(vtk_qt_components
