Python: Handle force_compute and integrator pure virtual classes
This is handling using trampoling classes PyForceCompute and PyIntegrator.
Allowing to bind any derived classes to its base classes.
For add_force , or integrator_method for example.

Also:
- Rename all ForceCompute derived classes to start with force_compute.
- Add force_function_wlc_petrosyan_normalized to dynamics.forces namespace

--- a/modules/dynamics/CMakeLists.txt
+++ b/modules/dynamics/CMakeLists.txt
@@ -8,6 +8,7 @@ set(SG_MODULE_${SG_MODULE_NAME}_DEPENDS
 set(SG_MODULE_${SG_MODULE_NAME}_SOURCES
     dynamics_graph_glue.cpp
     force_compute.cpp
+    force_functions.cpp
     integrator.cpp
     particle.cpp
     bond.cpp
